# python_msctesis

./: .gitignore  Standard.ipynb  pyproject.toml  readme.md
.ipynb_checkpoints/: Standard-checkpoint.ipynb  datos-checkpoint.csv  datos-checkpoint.txt
data/: datos.csv
